--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #ffff;
+  background: white;
 }
 
 /* Handle */
@@ -145,10 +145,9 @@ a {
 
 @media (max-width: 768px) {
   .swiper-button-next,
-.swiper-button-prev {
+  .swiper-button-prev {
     display: none;
   }
-
   .swiper-pagination {
     display: block;
   }
@@ -194,6 +193,10 @@ input:checked + .slider-v3::after {
   left: 20px;
   background: #009FFF;
   box-shadow: 0 0 0 0 #f2f2f2 inset;
+}
+
+.bottom-scroll-none::-webkit-scrollbar {
+  height: 0 !important;
 }
 
 @tailwind base;
