--- a/css/output.css
+++ b/css/output.css
@@ -19,7 +19,7 @@
 /* Track */
 
 ::-webkit-scrollbar-track {
-  background: white;
+  background: #ffff;
 }
 
 /* Handle */
@@ -163,7 +163,7 @@ a {
 
 @media (max-width: 768px) {
   .swiper-button-next,
-  .swiper-button-prev {
+.swiper-button-prev {
     display: none;
   }
 
@@ -1241,6 +1241,10 @@ select{
   z-index: 100;
 }
 
+.z-\[0\]{
+  z-index: 0;
+}
+
 .col-span-2{
   grid-column: span 2 / span 2;
 }
@@ -1275,6 +1279,10 @@ select{
 
 .m-auto{
   margin: auto;
+}
+
+.m-\[a\]{
+  margin: a;
 }
 
 .mx-1{
@@ -1325,6 +1333,11 @@ select{
 .my-\[4px\]{
   margin-top: 4px;
   margin-bottom: 4px;
+}
+
+.my-0{
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .mb-1{
@@ -1635,6 +1648,26 @@ select{
   margin-top: auto;
 }
 
+.mr-\[40px\]{
+  margin-right: 40px;
+}
+
+.mr-\[6px\]{
+  margin-right: 6px;
+}
+
+.mt-\[2px\]{
+  margin-top: 2px;
+}
+
+.mt-\[50px\]{
+  margin-top: 50px;
+}
+
+.mt-\[40px\]{
+  margin-top: 40px;
+}
+
 .block{
   display: block;
 }
@@ -1823,6 +1856,10 @@ select{
   height: 60px;
 }
 
+.h-\[65px\]{
+  height: 65px;
+}
+
 .h-\[67px\]{
   height: 67px;
 }
@@ -1867,8 +1904,8 @@ select{
   height: 100%;
 }
 
-.h-\[65px\]{
-  height: 65px;
+.h-\[100\%\]{
+  height: 100%;
 }
 
 .max-h-\[100\%\]{
@@ -1913,6 +1950,10 @@ select{
 
 .w-\[116px\]{
   width: 116px;
+}
+
+.w-\[122px\]{
+  width: 122px;
 }
 
 .w-\[183px\]{
@@ -2025,10 +2066,6 @@ select{
 
 .w-full{
   width: 100%;
-}
-
-.w-\[122px\]{
-  width: 122px;
 }
 
 .min-w-10{
@@ -2191,6 +2228,14 @@ select{
   max-width: 752px;
 }
 
+.max-w-\[840px\]{
+  max-width: 840px;
+}
+
+.max-w-\[750px\]{
+  max-width: 750px;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -2281,6 +2326,10 @@ select{
   flex-wrap: wrap;
 }
 
+.items-start{
+  align-items: flex-start;
+}
+
 .items-center{
   align-items: center;
 }
@@ -2353,6 +2402,10 @@ select{
   gap: 60px;
 }
 
+.gap-\[50px\]{
+  gap: 50px;
+}
+
 .gap-x-\[30px\]{
   -moz-column-gap: 30px;
        column-gap: 30px;
@@ -2413,6 +2466,10 @@ select{
   border-radius: 0.25rem;
 }
 
+.rounded-\[0_0_16px_16px\]{
+  border-radius: 0 0 16px 16px;
+}
+
 .rounded-\[12px\]{
   border-radius: 12px;
 }
@@ -2467,10 +2524,6 @@ select{
 
 .rounded-lg{
   border-radius: 0.5rem;
-}
-
-.rounded-\[0_0_16px_16px\]{
-  border-radius: 0 0 16px 16px;
 }
 
 .border{
@@ -2713,6 +2766,15 @@ select{
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.bg-\[\]{
+  background-color: ;
+}
+
+.bg-\[\#1A9BEA\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 155 234 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[linear-gradient\(101deg\2c _\#587AFF_-5\.69\%\2c _\#7144F5_44\.08\%\2c _\#D426FF_111\.99\%\)\]{
   background-image: linear-gradient(101deg, #587AFF -5.69%, #7144F5 44.08%, #D426FF 111.99%);
 }
@@ -2793,6 +2855,10 @@ select{
 
 .p-\[8px\]{
   padding: 8px;
+}
+
+.p-\[90px\]{
+  padding: 90px;
 }
 
 .px-1{
@@ -2925,6 +2991,11 @@ select{
   padding-bottom: 70px;
 }
 
+.py-\[80px\]{
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
 .pb-2{
   padding-bottom: 0.5rem;
 }
@@ -3009,12 +3080,36 @@ select{
   padding-top: 24px;
 }
 
+.pb-\[160px\]{
+  padding-bottom: 160px;
+}
+
+.pt-\[80px\]{
+  padding-top: 80px;
+}
+
+.pt-\[50px\]{
+  padding-top: 50px;
+}
+
+.pt-\[110px\]{
+  padding-top: 110px;
+}
+
+.pb-\[80px\]{
+  padding-bottom: 80px;
+}
+
 .text-center{
   text-align: center;
 }
 
 .text-right{
   text-align: right;
+}
+
+.font-\[\#009FFF\]{
+  font-family: #009FFF;
 }
 
 .text-\[12px\]{
@@ -3086,6 +3181,14 @@ select{
   line-height: 1.25rem;
 }
 
+.text-\[80px\]{
+  font-size: 80px;
+}
+
+.text-\[60px\]{
+  font-size: 60px;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -3104,6 +3207,10 @@ select{
 
 .font-semibold{
   font-weight: 600;
+}
+
+.font-\[80px\]{
+  font-weight: 80px;
 }
 
 .uppercase{
@@ -3238,6 +3345,10 @@ select{
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\]{
+  color: ;
 }
 
 .underline{
@@ -3414,12 +3525,12 @@ select{
 }
 
 @media (min-width: 640px){
-  .sm\:block{
-    display: block;
-  }
-
   .sm\:\!block{
     display: block !important;
+  }
+
+  .sm\:block{
+    display: block;
   }
 
   .sm\:flex{
