--- a/css/output.css
+++ b/css/output.css
@@ -3551,6 +3551,22 @@ select{
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1250px){
+  .min-\[1250px\]\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1500px){
+  .min-\[1500px\]\:flex-row{
+    flex-direction: row;
+  }
 }
 
 /*# sourceMappingURL=output.css.map */
