--- a/css/output.css
+++ b/css/output.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 @import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
 
 @font-face {
@@ -178,6 +180,89 @@ a {
 
 .product-item-slider .swiper-slide-active {
   opacity: 1 !important;
+}
+
+@media (max-width: 1600px) {
+  .popularSwiper {
+    margin-left: -20px;
+    width: calc(100% + 32px);
+    padding-bottom: 30px;
+  }
+
+  .popularSwiper .swiper-pagination {
+    bottom: 0px;
+  }
+
+  .popularSwiper .swiper-slide {
+    width: 320px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .popularSwiper .swiper-slide {
+    width: 190px;
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 1500px) {
+  .categoriesSwiper {
+    margin-left: -20px;
+    width: calc(100% + 32px);
+    padding-bottom: 30px;
+  }
+
+  .categoriesSwiper .swiper-pagination {
+    bottom: 0px;
+  }
+
+  .categoriesSwiper .swiper-slide {
+    width: 320px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .categoriesSwiper .swiper-slide {
+    width: 190px;
+    margin-left: 15px;
+  }
+
+  .swiperPartners .swiper-slide {
+    width: 190px;
+    margin-left: 15px;
+  }
+
+  .swiperPartners {
+    margin-left: -16px;
+    width: calc(100% + 32px);
+    padding-bottom: 30px;
+  }
+
+  .swiperPartners .swiper-pagination {
+    bottom: 0px;
+  }
+
+  .infoSwiper {
+    padding-bottom: 30px;
+  }
+
+  .infoSwiper .swiper-pagination {
+    bottom: 0px;
+  }
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+.custom-scrollbar {
+  -ms-overflow-style: none;
+  /* IE и Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .bg {
@@ -1215,6 +1300,10 @@ select{
 
 .top-\[50\%\]{
   top: 50%;
+}
+
+.top-\[7px\]{
+  top: 7px;
 }
 
 .top-\[calc\(100\%\+6px\)\]{
@@ -2454,6 +2543,10 @@ select{
   overflow-y: auto;
 }
 
+.whitespace-nowrap{
+  white-space: nowrap;
+}
+
 .text-nowrap{
   text-wrap: nowrap;
 }
@@ -3491,6 +3584,218 @@ select{
   background-color: rgb(0 159 255 / var(--tw-bg-opacity, 1));
 }
 
+@media (max-width: 1500px){
+  .max-\[1500px\]\:right-\[0px\]{
+    right: 0px;
+  }
+
+  .max-\[1500px\]\:mb-\[30px\]{
+    margin-bottom: 30px;
+  }
+
+  .max-\[1500px\]\:w-\[40vw\]{
+    width: 40vw;
+  }
+
+  .max-\[1500px\]\:w-\[50vw\]{
+    width: 50vw;
+  }
+
+  .max-\[1500px\]\:max-w-\[100\%\]{
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 1024px){
+  .max-\[1024px\]\:static{
+    position: static;
+  }
+
+  .max-\[1024px\]\:mb-\[-36px\]{
+    margin-bottom: -36px;
+  }
+
+  .max-\[1024px\]\:mb-\[24px\]{
+    margin-bottom: 24px;
+  }
+
+  .max-\[1024px\]\:ml-\[auto\]{
+    margin-left: auto;
+  }
+
+  .max-\[1024px\]\:ml-auto{
+    margin-left: auto;
+  }
+
+  .max-\[1024px\]\:mr-\[-24px\]{
+    margin-right: -24px;
+  }
+
+  .max-\[1024px\]\:mt-\[24px\]{
+    margin-top: 24px;
+  }
+
+  .max-\[1024px\]\:mt-\[auto\]{
+    margin-top: auto;
+  }
+
+  .max-\[1024px\]\:flex{
+    display: flex;
+  }
+
+  .max-\[1024px\]\:h-auto{
+    height: auto;
+  }
+
+  .max-\[1024px\]\:min-h-\[auto\]{
+    min-height: auto;
+  }
+
+  .max-\[1024px\]\:w-\[80vw\]{
+    width: 80vw;
+  }
+
+  .max-\[1024px\]\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .max-\[1024px\]\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-\[1024px\]\:items-start{
+    align-items: flex-start;
+  }
+
+  .max-\[1024px\]\:p-\[0px\]{
+    padding: 0px;
+  }
+
+  .max-\[1024px\]\:px-\[24px\]{
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  .max-\[1024px\]\:py-\[32px\]{
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
+  .max-\[1024px\]\:py-\[36px\]{
+    padding-top: 36px;
+    padding-bottom: 36px;
+  }
+
+  .max-\[1024px\]\:py-\[50px\]{
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .max-\[1024px\]\:text-\[16px\]{
+    font-size: 16px;
+  }
+
+  .max-\[1024px\]\:text-\[32px\]{
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 767px){
+  .max-\[767px\]\:mb-\[10px\]{
+    margin-bottom: 10px;
+  }
+
+  .max-\[767px\]\:mb-\[20px\]{
+    margin-bottom: 20px;
+  }
+
+  .max-\[767px\]\:mt-\[20px\]{
+    margin-top: 20px;
+  }
+
+  .max-\[767px\]\:h-\[290px\]{
+    height: 290px;
+  }
+
+  .max-\[767px\]\:h-\[65vw\]{
+    height: 65vw;
+  }
+
+  .max-\[767px\]\:min-h-\[490px\]{
+    min-height: 490px;
+  }
+
+  .max-\[767px\]\:w-\[60vw\]{
+    width: 60vw;
+  }
+
+  .max-\[767px\]\:max-w-\[300px\]{
+    max-width: 300px;
+  }
+
+  .max-\[767px\]\:max-w-\[80px\]{
+    max-width: 80px;
+  }
+
+  .max-\[767px\]\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .max-\[767px\]\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-\[767px\]\:items-start{
+    align-items: flex-start;
+  }
+
+  .max-\[767px\]\:gap-\[20px\]{
+    gap: 20px;
+  }
+
+  .max-\[767px\]\:overflow-x-auto{
+    overflow-x: auto;
+  }
+
+  .max-\[767px\]\:p-\[16px\]{
+    padding: 16px;
+  }
+
+  .max-\[767px\]\:py-\[32px\]{
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
+  .max-\[767px\]\:py-\[40px\]{
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .max-\[767px\]\:pl-\[24px\]{
+    padding-left: 24px;
+  }
+
+  .max-\[767px\]\:text-\[18px\]{
+    font-size: 18px;
+  }
+
+  .max-\[767px\]\:text-\[24px\]{
+    font-size: 24px;
+  }
+
+  .max-\[767px\]\:text-\[25px\]{
+    font-size: 25px;
+  }
+
+  .max-\[767px\]\:text-\[32px\]{
+    font-size: 32px;
+  }
+
+  .max-\[767px\]\:text-\[15px\]{
+    font-size: 15px;
+  }
+}
+
 @media (min-width: 640px){
   .sm\:\!block{
     display: block !important;
@@ -3550,10 +3855,6 @@ select{
 
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
