--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
 @font-face {
   font-family: lena;
@@ -158,6 +159,81 @@ a {
 }
 .product-item-slider .swiper-slide-active {
   opacity: 1 !important;
+}
+
+@media (max-width: 1600px) {
+  .popularSwiper {
+    margin-left: -20px;
+    width: calc(100% + 32px);
+    padding-bottom: 30px;
+  }
+  .popularSwiper .swiper-pagination {
+    bottom: 0px;
+  }
+
+  .popularSwiper .swiper-slide {
+    width: 320px;
+    margin-left: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .popularSwiper .swiper-slide {
+    width: 190px;
+    margin-left: 15px;
+  }
+}
+@media (max-width: 1500px) {
+  .categoriesSwiper {
+    margin-left: -20px;
+    width: calc(100% + 32px);
+    padding-bottom: 30px;
+  }
+  .categoriesSwiper .swiper-pagination {
+    bottom: 0px;
+  }
+
+  .categoriesSwiper .swiper-slide {
+    width: 320px;
+    margin-left: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .categoriesSwiper .swiper-slide {
+    width: 190px;
+    margin-left: 15px;
+  }
+
+  .swiperPartners .swiper-slide {
+    width: 190px;
+    margin-left: 15px;
+  }
+
+  .swiperPartners {
+    margin-left: -16px;
+    width: calc(100% + 32px);
+    padding-bottom: 30px;
+  }
+  .swiperPartners .swiper-pagination {
+    bottom: 0px;
+  }
+
+  .infoSwiper {
+    padding-bottom: 30px;
+  }
+  .infoSwiper .swiper-pagination {
+    bottom: 0px;
+  }
+}
+.custom-scrollbar::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+.custom-scrollbar {
+  -ms-overflow-style: none;
+  /* IE и Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .bg {
