--- a/css/style.scss
+++ b/css/style.scss
@@ -204,6 +204,79 @@ a {
   }
 }
 
+@media (max-width: 1600px) {
+  .popularSwiper {
+    margin-left: -20px;
+    width: calc(100% + 32px);
+    padding-bottom: 30px;
+    .swiper-pagination{
+      bottom: 0px;
+    }
+  }
+  .popularSwiper .swiper-slide {
+    width: 320px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .popularSwiper .swiper-slide {
+    width: 190px;
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 1500px) {
+  .categoriesSwiper {
+    margin-left: -20px;
+    width: calc(100% + 32px);
+    padding-bottom: 30px;
+    .swiper-pagination{
+      bottom: 0px;
+    }
+  }
+  .categoriesSwiper .swiper-slide {
+    width: 320px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .categoriesSwiper .swiper-slide {
+    width: 190px;
+    margin-left: 15px;
+  }
+  .swiperPartners .swiper-slide {
+    width: 190px;
+    margin-left: 15px;
+  }
+  .swiperPartners {
+    margin-left: -16px;
+    width: calc(100% + 32px);
+    padding-bottom: 30px;
+    .swiper-pagination{
+      bottom: 0px;
+    }
+  }
+  .infoSwiper {
+    padding-bottom: 30px;
+    .swiper-pagination{
+      bottom: 0px;
+    }
+  }
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+.custom-scrollbar {
+  -ms-overflow-style: none; /* IE и Edge */
+  scrollbar-width: none;    /* Firefox */
+}
+
+
 .bg{
   background-size: 100% 100%;
   background-repeat: no-repeat;
