--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,35 @@ input:checked + .slider-v3::after {
   height: 0 !important;
 }
 
+.swiperHero .swiper-pagination {
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  transform: translateX(-50%);
+  background: rgba(232, 232, 232, 0.5019607843);
+  height: 20px;
+  width: auto;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4px;
+}
+@media (min-width: 768px) {
+  .swiperHero .swiper-pagination {
+    display: none;
+  }
+}
+.swiperHero .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background: white;
+  opacity: 1;
+}
+.swiperHero .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #009FFF;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
