--- a/css/style.scss
+++ b/css/style.scss
@@ -254,6 +254,36 @@ input:checked + .slider-v3::after {
   }
 }
 
+.swiperHero {
+  .swiper-pagination{
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    transform: translateX(-50%);
+    background: #E8E8E880;
+    height: 20px;
+    width: auto;
+    border-radius: 20px;
+    @include flex('sb', 'c');
+    padding: 4px;
+    
+    @media (min-width: 768px) {
+      display: none;
+    }
+
+    .swiper-pagination-bullet{
+      width: 12px;
+      height: 12px;
+      background: white;
+      opacity: 1;
+
+      &.swiper-pagination-bullet-active{
+        background: #009FFF;
+      }
+    }
+  }
+}
+
 
 @tailwind base;
 @tailwind components;
