--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,15 @@ a {
   .infoSwiper .swiper-pagination {
     bottom: 0px;
   }
+
+  .bg-none {
+    background: none !important;
+  }
+
+  #tab-login, #tab-register {
+    font-size: 20px !important;
+    padding: 12px !important;
+  }
 }
 .custom-scrollbar::-webkit-scrollbar {
   width: 0px;
